--- a/Caspara.TestConsole/Caspara.TestConsole.csproj
+++ b/Caspara.TestConsole/Caspara.TestConsole.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\iCsys\Caspara.csproj" />
+    <ProjectReference Include="..\Caspara\Caspara.csproj" />
   </ItemGroup>
 
 </Project>
