Started testing of commands

--- a/Caspara.Commands.ClientTwo/Caspara.Commands.ClientTwo.csproj
+++ b/Caspara.Commands.ClientTwo/Caspara.Commands.ClientTwo.csproj
@@ -6,12 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Caspara.Messaging.ZeroMQ\Caspara.Messaging.ZeroMQ.csproj" />
     <ProjectReference Include="..\Caspara\Caspara.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Commands\" />
-    <Folder Include="CommandHandlers\" />
   </ItemGroup>
 
 </Project>
