--- a/Caspara.Commands.ClientOne/Caspara.Commands.ClientOne.csproj
+++ b/Caspara.Commands.ClientOne/Caspara.Commands.ClientOne.csproj
@@ -6,11 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Caspara.Messaging.ZeroMQ\Caspara.Messaging.ZeroMQ.csproj" />
     <ProjectReference Include="..\Caspara\Caspara.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="CommandHandlers\" />
   </ItemGroup>
 
 </Project>
